multiple css improvements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ uses:
             <div class="hello container">
                 <h1>Hi,</h1>
                 <h1>I am Evan&nbsp;Pratten</h1>
-                <h3 id="callsign"><a href="https://www.qrz.com/db/VA3ZZA"><em>VA3ZZA</em></a></h3>
             </div>
         </div>
 
@@ -24,9 +23,7 @@ uses:
             <div class="inner-content-container home-content container">
                 <h1>Who I am</h1>
 
-                <h3>I am a senior-year Highschool student who studies computer science, just finished a pipeline
-                    internship
-                    at <a href="https://industrialbrothers.com">Industrial Brothers</a> and am one of the primary
+                <h3>I am a senior-year Highschool student who studies computer science, a Canadian amateur radio operator (callsign <a href="https://www.qrz.com/db/VA3ZZA">va3zza</a>), and am one of the primary
                     software
                     developers
                     writing the code that powers competition-ready robots at <a href="https://github.com/frc5024">Raider
