--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ uses:
 
                 <div class="header-space"></div>
 
+                <!-- <h1>My Blog</h1>
+
+                <h3>The main function of this website is to host my <a href="/blog">blog</a>. </h3>
+
+                <div class="header-space"></div> -->
+
                 <!-- <h1>What I do</h1>
 
                 <h3> I am a software developer, and photographer. I use this website to host
