--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ uses:
                             {% if project.hero %}
                             <img src="{{project.hero.img_src}}" class="card-img-top" alt="{{project.title}}" loading="auto">
                             {% endif %}
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>{{project.title}}</strong></h5>
+                            <div class="card-body" {% if project.archived %}data-toggle="tooltip" data-placement="top" title="No longer actively maintained"{% endif %}>
+                                <h5 class="card-title"><strong>{{project.title}} {% if project.archived %}<span class="badge badge-secondary">Archived</span>{% endif %}</strong></h5>
                                 <p class="card-text">{{project.description}}</p>
 
                                 {% for text_btn in project.text_buttons %}
