update qrz page

--- a/qrz.html
+++ b/qrz.html
@@ -97,6 +97,11 @@
             left: 0;
         }
 
+        a.no_animate:hover:after{
+            right: 50%;
+            left: 50%;
+        }
+
         /* Content container */
         .content-container {
             max-width: 830px;
@@ -108,6 +113,14 @@
 <body>
 
     <div class="content-container">
+
+        <div>
+            <img src="https://img.shields.io/badge/licensed-15/12/2020-blue" alt="Licensed 15/12/2020">
+            <img src="https://img.shields.io/badge/license%20class-Basic%20with%20Honours-blue" alt="License Class: Basic with Honours">
+            <a class="no_animate" href="https://aprs.fi/#!addr=EN92JX"><img src="https://img.shields.io/badge/grid-EN92jx-orange" alt="Grid: EN92jx"></a>
+        </div>
+
+        
         <h2>
             Hi there
             <g-emoji class="g-emoji" alias="wave"
@@ -120,9 +133,7 @@
         <p>
             I am a <my_age>17</my_age> year-old student with an ever-growing list of hobbies. I am mainly a software
             developer, maintaining a plethora of projects over on <a href="https://github.com/ewpratten">GitHub</a>.
-            Included in this, I am the lead software developer at
-            <a href="https://github.com/frc5024">Raider Robotics</a>,
-            a competitive robotics team. I also work with software-defined radios, do
+            I also work with software-defined radios, do
             <a href="https://www.instagram.com/evanpratten/">photography</a>, and much more.
         </p>
 
@@ -130,12 +141,18 @@
             For more information on my work, and my blog, see <a href="https://retrylife.ca">my website</a>.
         </p>
 
+        <p>
+            On HF, I operate my Elecraft KX2 at 1-5W. I'll occasionally bump the power up as needed if I'm having an
+            issue with a specific QSO. I almost exclusively operate CW so I can get some morse code practice. I operate
+            on 20m through the day, and drop down to 40m at night.  
+        </p>
+
         <h2>
-            My Gear
+            All My Gear
             <g-emoji class="g-emoji" alias="wrench"
                 fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png">
-                <img class="emoji" alt="wrench" src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png"
-                    width="20" height="20">
+                <img class="emoji" alt="wrench"
+                    src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png" width="20" height="20">
             </g-emoji>
         </h2>
 
@@ -217,12 +234,18 @@
             Contact Info
             <g-emoji class="g-emoji" alias="phone"
                 fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f1.png">
-                <img class="emoji" alt="phone" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f1.png"
-                    width="20" height="20">
+                <img class="emoji" alt="phone"
+                    src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f1.png" width="20" height="20">
             </g-emoji>
         </h2>
 
         <p>Additional Contact information can be found on <a href="https://retrylife.ca/about">my website</a>.</p>
+
+        <hr>
+
+        <img src="https://rbn.telegraphy.de/activity/image/VA3ZZA" style="width:100%;">
+
+        <iframe align="top" frameborder="0" height="500" width="100%" scrolling="yes" src="https://logbook.qrz.com/lbstat/VA3ZZA/" width="640"></iframe>
 
     </div>
 
