Add lookup badge

--- a/qrz.html
+++ b/qrz.html
@@ -120,6 +120,7 @@
                 alt="License Class: Basic with Honours">
             <a class="no_animate" href="https://aprs.fi/#!addr=EN92JX"><img
                     src="https://img.shields.io/badge/grid-EN92jx-orange" alt="Grid: EN92jx"></a>
+            <img src="https://ham.apis.retrylife.ca/callsign/va3zza/badges/lookups" alt="">
         </div>
 
 
