Update website metadata tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@ uses:
 - masonry
 ---
 
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
 {% include head.html %}
+<script type="application/ld+json">
+    {
+        "@context": "http://schema.org/",
+        "@type": "Person",
+        "name": "Evan Pratten",
+        "jobTitle": "Software Developer",
+        "url": "https://retrylife.ca"
+    }
+</script>
+</head>
 
 <body>
 
