qrz page updates

--- a/qrz.html
+++ b/qrz.html
@@ -120,7 +120,7 @@
                 alt="License Class: Basic with Honours">
             <a class="no_animate" href="https://aprs.fi/#!addr=EN92JX"><img
                     src="https://img.shields.io/badge/grid-EN92jx-orange" alt="Grid: EN92jx"></a>
-            <img src="https://ham.apis.retrylife.ca/callsign/va3zza/badges/lookups" alt="">
+            <!-- <img src="https://ham.apis.retrylife.ca/callsign/va3zza/badges/lookups" alt=""> -->
         </div>
 
 
@@ -248,8 +248,11 @@
 
         <img src="https://rbn.telegraphy.de/activity/image/VA3ZZA" style="width:100%;">
 
-        <iframe align="top" frameborder="0" height="500" width="100%" scrolling="yes"
-            src="https://logbook.qrz.com/lbstat/VA3ZZA/" width="640"></iframe>
+        <iframe align="top" frameborder="0" height="550" width="100%" scrolling="yes"
+            src="https://clublog.org/last10_iframe.php?call=VA3ZZA&limit=30"></iframe>
+
+        <!-- <iframe align="top" frameborder="0" height="500" width="100%" scrolling="yes"
+            src="https://logbook.qrz.com/lbstat/VA3ZZA/" width="640"></iframe> -->
 
     </div>
 
