--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ uses:
 
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-{% include head.html %}
-<script type="application/ld+json">
+    {% include head.html %}
+    <script type="application/ld+json">
     {
         "@context": "http://schema.org/",
         "@type": "Person",
@@ -18,6 +18,23 @@ uses:
         "url": "https://retrylife.ca"
     }
 </script>
+
+    <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/easyScrollDots.min.css">
+
+    <style>
+        .scroll-indicator-controller>div {
+            border: 1px solid var(--color-blue);
+            background: unset;
+        }
+
+        .scroll-indicator-controller>div span {
+            color: var(--color-blue);
+        }
+
+        .scroll-indicator-controller>div.active {
+            background: var(--color-blue);
+        }
+    </style> -->
 </head>
 
 <body>
@@ -26,79 +43,125 @@ uses:
         <!-- Navbar -->
         {% include nav.html %}
 
-        <div class="color-hero">
-            <div class="hello container">
-                <h1>Hi,</h1>
-                <h1>I am Evan&nbsp;Pratten</h1>
+        <section>
+            <div>
+                <div class="scroll-indicator" id="headerSection" data-scroll-indicator-title="Hello"></div>
             </div>
-        </div>
+            <div class="color-hero">
+                <div class="hello container">
+                    <h1>Hi,</h1>
+                    <h1>I am Evan&nbsp;Pratten</h1>
+                </div>
+            </div>
+        </section>
 
         <div class="home-secondary-panel edge--top">
             <div class="inner-content-container home-content container">
-                <h1>Who I am</h1>
+                <div class="card border-loop border-loop-right">
+                    <div class="card-body">
 
-                <h3>I am a senior-year Highschool student who studies computer science, a Canadian amateur radio operator (callsign <a href="https://www.qrz.com/db/VA3ZZA">va3zza</a>), and am one of the primary
-                    software
-                    developers
-                    writing the code that powers competition-ready robots at <a href="https://github.com/frc5024">Raider
-                        Robotics</a>.</h3>
+                        <h1>Who I am</h1>
 
-                <div class="header-space"></div>
-
-                <!-- <h1>My Blog</h1>
-
-                <h3>The main function of this website is to host my <a href="/blog">blog</a>. </h3>
-
-                <div class="header-space"></div> -->
-
-                <!-- <h1>What I do</h1>
-
-                <h3> I am a software developer, and photographer. I use this website to host
-                    <a href="/blog">blog posts</a>
-                    about my learnings as a programmer, and to share the best of my
-                    <a href=" /photography">photos</a></h3>
-
-
-                <div style="padding-top:3rem;"></div>
-                <hr>
-                <div style="padding-top:3rem;"></div> -->
-
-                <h1>My notable projects</h1>
-
-                <h3>I develop and provide many web and desktop applications for public use. I host them all on my
-                    private backend infrastructure. The network of servers that powers these applications was originally
-                    set up to help me learn server management and distributed application development.</h3>
-
-
-                <div style="padding-top:3rem;"></div>
-
-                <div class="row" id="project-grid">
-
-                    {% for project in site.data.projects %}
-                    <div class="col-sm-4 project-item">
-                        <div class="card home-project">
-                            {% if project.hero %}
-                            <img src="{{project.hero.img_src}}" class="card-img-top" alt="{{project.title}}" loading="auto">
-                            {% endif %}
-                            <div class="card-body" {% if project.archived %}data-toggle="tooltip" data-placement="top" title="No longer actively maintained"{% endif %}>
-                                <h5 class="card-title"><strong>{{project.title}} {% if project.archived %}<span class="badge badge-secondary">Archived</span>{% endif %}</strong></h5>
-                                <p class="card-text">{{project.description}}</p>
-
-                                {% for text_btn in project.text_buttons %}
-                                <a href="{{text_btn.url}}" class="btn btn-{{text_btn.color}}">{{text_btn.text}}</a>
-                                {% endfor %}
-
-                                {% for icon_btn in project.icon_buttons %}
-                                <a href="{{icon_btn.url}}" class="btn btn-dark"><i class="{{icon_btn.icon}}"></i></a>
-                                {% endfor %}
-                            </div>
+                        <h3>I am a senior-year Highschool student who studies computer science, a Canadian amateur radio
+                            operator (callsign <a href="https://www.qrz.com/db/VA3ZZA">va3zza</a>), and am one of the
+                            primary
+                            software
+                            developers
+                            writing the code that powers competition-ready robots at <a
+                                href="https://github.com/frc5024">Raider
+                                Robotics</a>.</h3>
+                        <div>
+                            <div class="scroll-indicator" id="whoSection" data-scroll-indicator-title="Who I am"></div>
                         </div>
                     </div>
-                    {% endfor %}
+                </div>
+
+                <!-- <div class="header-space"></div> -->
+
+                <div class="card card border-loop border-loop-left">
+                    <div class="card-body">
+                        <h1>The blog</h1>
+                        <h3>I occasionally post writeups and tutorials in the blog portion of this website. Below are
+                            the
+                            three most recent posts.</h3>
+
+                        <div class="card-deck">
+                            {% assign i = 0 %}
+                            {% for post in site.posts %}
+                            {% if i < 3 %} <div class="card home-project">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{post.title}}</h5>
+                                    <h6 class="card-text">{{post.excerpt}}</h6>
+                                </div>
+                                <div class="card-footer">
+                                    {% assign post_date = post.date | split: " " %}
+                                    <small class="text-muted">Published: {{post_date.first}}</small>
+                                    <a href="{{post.url}}"><button class="btn btn-outline-primary btn-sm"
+                                            style="float:right;">Read Post</button></a>
+                                </div>
+                        </div>
+                        {% endif %}
+                        {% assign i = i | plus:1 %}
+                        {% endfor %}
+                    </div>
+
+                    <br>
+
+                    <div style="text-align:center;">
+                        <a href="/blog" style="margin:auto;"><button type="button" class="btn btn-outline-primary">View
+                                More</button></a>
+                    </div>
 
                 </div>
             </div>
+
+            <!-- <div class="header-space"></div> -->
+
+            <div class="card card border-loop border-loop-right">
+                <div class="card-body">
+                    <h1>My notable projects</h1>
+
+                    <h3>I develop and provide many web and desktop applications for public use. I host them all on my
+                        private backend infrastructure. The network of servers that powers these applications was
+                        originally
+                        set up to help me learn server management and distributed application development.</h3>
+
+
+                    <div style="padding-top:3rem;"></div>
+
+                    <div class="row" id="project-grid">
+
+                        {% for project in site.data.projects %}
+                        <div class="col-sm-4 project-item">
+                            <div class="card home-project">
+                                {% if project.hero %}
+                                <img src="{{project.hero.img_src}}" class="card-img-top" alt="{{project.title}}"
+                                    loading="auto">
+                                {% endif %}
+                                <div class="card-body" {% if project.archived %}data-toggle="tooltip"
+                                    data-placement="top" title="No longer actively maintained" {% endif %}>
+                                    <h5 class="card-title"><strong>{{project.title}} {% if project.archived %}<span
+                                                class="badge badge-secondary">Archived</span>{% endif %}</strong></h5>
+                                    <p class="card-text">{{project.description}}</p>
+
+                                    {% for text_btn in project.text_buttons %}
+                                    <a href="{{text_btn.url}}" class="btn btn-{{text_btn.color}}">{{text_btn.text}}</a>
+                                    {% endfor %}
+
+                                    {% for icon_btn in project.icon_buttons %}
+                                    <a href="{{icon_btn.url}}" class="btn btn-dark"><i
+                                            class="{{icon_btn.icon}}"></i></a>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 
     </div>
 
@@ -132,5 +195,17 @@ uses:
         setTimeout(orderProjectGrid, 2000);
         setTimeout(orderProjectGrid, 5000);
     </script>
+
+
+    <!-- Dotdav -->
+    <!-- <script src="{{site.baseurl}}/assets/js/easyScrollDots.min.js"></script>
+    <script>
+        easyScrollDots({
+            'fixedNav': false,
+            'fixedNavId': '',
+            'fixedNavUpward': false,
+            'offset': 50
+        });
+    </script> -->
 
 </body>
