--- a/beta/software.html
+++ b/beta/software.html
@@ -25,7 +25,7 @@ layout: raw_page
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus a augue id egestas.
                         Etiam maximus velit at mauris viverra inte</h3>
                 </div>
-                <div class="col-7">
+                <div class="col-7 work-experience-list">
                     <!-- <ul class="list-group"> -->
                     {% for job in site.data.work_experience %}
                     <li class="card work-experience-item" onclick="document.location='{{job.url}}';">
