--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ uses:
     <!-- Xss warning -->
     <script>
         if ((new URLSearchParams(window.location.search)).get("dnsxss") == "") {
-            alert("It looks like the DNS lookup service you just used is vulnerable to XSS. Anyways, welcome to my website! Don't worry about the code I just executed ;)");
+            alert("It looks like the DNS lookup service you just used is vulnerable to XSS. Anyways, welcome to my website!)");
         }
     </script>
 
