Add robots to projects

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ uses:
                             onclick="updateProjectWall('library');">Libraries</button>
                         <button style="margin:5px;" type="button" class="btn btn-outline-info btn-sm"
                             onclick="updateProjectWall('game');">Games</button>
+                        <button style="margin:5px;" type="button" class="btn btn-outline-info btn-sm"
+                            onclick="updateProjectWall('robot');">Robots</button>
                     </div>
 
                     <div class="row" id="project-grid">
