Some site updates

--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@ uses:
 
                         <h1>Who I am</h1>
 
-                        <h3>I am a senior-year Highschool student who studies computer science, a Canadian amateur radio
-                            operator (callsign <a href="https://www.qrz.com/db/VA3ZZA">va3zza</a>), and am one of the
-                            primary
-                            software
-                            developers
-                            writing the code that powers competition-ready robots at <a
+                        <h3>I am a first-year college student, studying Information Security at Sheridan College,
+                            starting this fall. I develop software both as a hobby, and professionally, and have been
+                            programming since I was in the 5th grade. I am also a Canadian amateur radio operator
+                            (callsign <strong>VA3ZZA</strong>), and the former Lead Software Developer at <a
                                 href="https://github.com/frc5024">Raider
                                 Robotics</a>.</h3>
                         <div>
@@ -176,6 +174,11 @@ uses:
                         {% endfor %}
 
                     </div>
+                </div>
+                <div style="text-align:center;">
+                    <a href="https://github.com/ewpratten" style="margin:auto;"><button type="button"
+                            class="btn btn-outline-primary">View
+                            More</button></a>
                 </div>
             </div>
         </div>
