--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             max-width: 800px;
             margin: auto;
         }
+
+        h2 {
+            margin-bottom: 0;
+        }
     </style>
 </head>
 
@@ -31,12 +35,12 @@
     <div style="margin-top:2em;margin-bottom:2em;">
         <center>
             <strong>
-                <h1 style="text-transform: uppercase; margin: 0;">
+                <h1 style="text-transform: uppercase; margin: 0; font-size:2.5em;">
                     E<span style="color: var(--dim-text); font-size: 0.8em;">van</span>
                     W<span style="color: var(--dim-text); font-size: 0.8em;">arren</span>
                     Pratten
                 </h1>
-                <font size=4 style="color:var(--dim-text);">SOFTWARE DEVELOPER</font>
+                <font size=3 style="color:var(--dim-text);">SOFTWARE DEVELOPER &middot; NETWORK ENGINEER</font>
             </strong>
             <br>
             <a href="https://github.com/ewpratten" rel="me">GitHub</a>
@@ -51,7 +55,7 @@
     <article class="container">
 
         <h2>About Me</h2>
-        <p>
+        <p style="margin-top:0;">
             By day I am a software developer, working on the tooling that powers children's TV productions at
             <a target="_blank" href="https://www.industrialbrothers.com">Industrial Brothers</a>.
             Perviously worked with
@@ -63,14 +67,25 @@
             interests, with the common focus of wanting to learn how things <em>really</em> work. I take deep dives
             into
             topics
-            that I find interesting, and occasionally write about them on my blog.
+            that I find interesting, and occasionally write about them on <a href="/blog">my blog</a>.
         </p>
 
         <h2>Whats in the Works</h2>
-        <p>I am currently working on a few projects, including:</p>
+        <p style="margin-top:0;">I am currently working on a few projects, including:</p>
         <ul>
             <li>Maintaining <a href="https://peeringdb.com/asn/54041">AS54041</a>, a small computer network</li>
-            <li>Publishing music under my own name on Spotify and Apple Music</li>
+            <li>
+                Publishing music under my own name on
+                <a target="_blank" href="https://open.spotify.com/artist/1aLNEmgqBJkhfkEZvf8Vh5" rel="me">Spotify</a>
+                and
+                <a target="_blank" href="https://music.apple.com/us/artist/evan-pratten/1611566708" rel="me">Apple
+                    Music</a>
+            </li>
+            <li>Maintaining a handful of <a href="/projects">Open-Source software tools</a></li>
+            <li>
+                Occasionally publishing interesting
+                <a target="_blank" href="https://instagram.com/ewpratten" rel="me">photos and artwork</a>
+            </li>
         </ul>
 
         <p>I am also working on an Internet-Draft:</p>
@@ -81,10 +96,9 @@
                 - Globally Unique IPv6 Addressing for Amateur Radio
             </li>
         </ul>
-
-        <h2></h2>
     </article>
 
+    <br>
     <hr>
     <p style="text-align:center;">
         Copyright &copy; 2017 - 2023 <strong>Evan Warren Pratten</strong>
