--- a/index.html
+++ b/index.html
@@ -4,30 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="https://branding.ewpratten.com/pfp/2022/460x460.webp" />
 
     <title>Evan Warren Pratten</title>
 
-    <style>
-        :root {
-            --dim-text: rgb(67, 67, 67);
-            --menu-header-bg: #000;
-        }
-
-        @media screen and (min-width: 800px) {
-            body {
-                text-align: justify;
-            }
-        }
-
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-
-        h2 {
-            margin-bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -43,11 +24,11 @@
                 <font size=3 style="color:var(--dim-text);">SOFTWARE DEVELOPER &middot; NETWORK ENGINEER</font>
             </strong>
             <br>
-            <a href="https://github.com/ewpratten" rel="me">GitHub</a>
+            <a target="_blank" href="https://github.com/ewpratten" rel="me">GitHub</a>
             &middot;
-            <a href="https://linkedin.com/in/ewpratten" rel="me">Linkedin</a>
+            <a target="_blank" href="https://linkedin.com/in/ewpratten" rel="me">Linkedin</a>
             &middot;
-            <a href="mailto:evan@ewpratten.com" rel="me">Contact</a>
+            <a target="_blank" href="mailto:evan@ewpratten.com" rel="me">Contact</a>
         </center>
     </div>
     <hr>
@@ -81,7 +62,7 @@
                 <a target="_blank" href="https://music.apple.com/us/artist/evan-pratten/1611566708" rel="me">Apple
                     Music</a>
             </li>
-            <li>Maintaining a handful of <a href="/projects">Open-Source software tools</a></li>
+            <li>Maintaining a handful of <a href="/projects.html">Open-Source software tools</a></li>
             <li>
                 Occasionally publishing interesting
                 <a target="_blank" href="https://instagram.com/ewpratten" rel="me">photos and artwork</a>
@@ -96,6 +77,7 @@
                 - Globally Unique IPv6 Addressing for Amateur Radio
             </li>
         </ul>
+
     </article>
 
     <br>
