--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Evan Warren Pratten</title>
 
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/static/styles/main.css">
 </head>
 
 <body>
