--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 
     <title>Evan Warren Pratten</title>
 
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/static/styles/main.css">
 </head>
 
 <body>
