--- a/index.html
+++ b/index.html
@@ -38,21 +38,15 @@
     <article class="container">
 
         <h2>About Me</h2>
-
-        <!-- Introduction -->
         <p>
             Hi, I am <strong>Evan</strong> (known online as <em>ewpratten</em>).
         </p>
-
-        <!-- Work -->
         <p>
             By day I am a <strong>Pipeline Software Developer</strong> at Toronto-based animation studio
             <a target="_blank" href="https://www.industrialbrothers.com">Industrial Brothers</a>
             where I build backend tooling that helps streamline the process from concept to final render
             for our productions. The most recent of which--<em>Daniel Spellbound</em>--is now streaming on Netflix.
         </p>
-
-        <!-- Personal -->
         <p>
             Outside of work, I keep myself busy with many hobbies, such as:
         <ul>
@@ -63,7 +57,7 @@
             <li>Managing network operations for <a target="_blank" href="https://as54041.peeringdb.com">AS54041</a></li>
             <li>
                 Maintaining various bits of
-                <a target="_blank" href="https://github.com/ewpratten?tab=repositories" rel="me">
+                <a target="_blank" href="https://github.com/ewpratten" rel="me">
                     open-source software
                 </a>
             </li>
@@ -74,7 +68,7 @@
             </li>
             <li><a target="_blank" href="https://instagram.com/evanpratten" rel="me">Photography</a></li>
             <li>Longboarding</li>
-            <li>Electrical Engineering</li>
+            <li>Tinkering with electronics</li>
         </ul>
         </p>
 
