update discord username

--- a/discord.html
+++ b/discord.html
@@ -9,6 +9,6 @@
 <body>
     Discord still doesn't have a way to add friends via URL :(<br>
     You'll have to add me manually. My username is:<br><br>
-    <strong>ewpratten#9114</strong>
+    <strong>ewpratten</strong>
 </body>
 </html>
