Revert "Move a comma"
This reverts commit c1cdf9f3a96f21aa65e73341d9c27821ce003dfe.

--- a/sites/retrylife.ca/index.html
+++ b/sites/retrylife.ca/index.html
@@ -29,7 +29,7 @@
             <h1 style="font-size: 4rem;">RetryLife</h1>
         </span>
         <p style="text-align: center;">
-            RetryLife was an electronic music collective based in London Ontario, Canada.
+            RetryLife was an electronic music collective based in London, Ontario Canada.
         </p>
         <hr>
 
