--- a/src/blog.html
+++ b/src/blog.html
@@ -10,8 +10,9 @@ title: Blog
     <ul>
         {% for post in group.items %}
             <li>
+
+                <span>{{ post.date | date: "%Y-%m-%d" }}:</span>
                 <a href="{{ post.url }}">{{ post.title }}</a>
-                <span>{{ post.date | date: "%B %d" }}</span>
             </li>
         {% endfor %}
     </ul>
