--- a/src/blog.html
+++ b/src/blog.html
@@ -3,17 +3,18 @@ layout: default
 title: Blog
 ---
 
+<p>The following is a list of articles I've written. This is also available in <a href="/rss.xml">RSS</a> format.</p>
+
 {% assign grouped_posts = site.posts | group_by_exp: "post", "post.date | date: '%Y'" %}
 
 {% for group in grouped_posts %}
-    <h2>{{ group.name }}</h2>
-    <ul>
-        {% for post in group.items %}
-            <li>
-
-                <span>{{ post.date | date: "%Y-%m-%d" }}:</span>
-                <a href="{{ post.url }}">{{ post.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+<h2>{{ group.name }}</h2>
+<ul>
+    {% for post in group.items %}
+    <li>
+        <span>{{ post.date | date: "%Y-%m-%d" }}:</span>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
 {% endfor %}
