--- a/src/photography.html
+++ b/src/photography.html
@@ -6,13 +6,13 @@ title: Photography
 <div class="photo-feed">
     {% assign photos_sorted = site.photos | sort: "date" | reverse %}
     {% for photo in photos_sorted %}
-    <div class="photo-feed-entry">
+    <div class="photo-feed-entry" style="margin-bottom: 1em;">
         <a href="{{ photo.url }}">
-            <img src="/assets/photography/{{ photo.file }}" alt="A photo titled: {{ photo.name }}" style="width: 100%;">
+            <img src="/assets/photography/{{ photo.file }}" alt="A photo titled: {{ photo.title }}" style="width: 100%;">
         </a>
-        <div style="display: flex; justify-content: space-between;">
-            <span>{{ photo.name }}</span>
-            <span>{{ photo.date | date: "%Y-%m-%d" }}</span>
+        <div style="display: flex; justify-content: space-between; font-size: 1.25em;">
+            <span>{{ photo.title }}</span>
+            <span style="color: gray;">{{ photo.date | date: "%Y-%m-%d" }}</span>
         </div>
     </div>
     {% endfor %}
