--- a/src/blog.html
+++ b/src/blog.html
@@ -13,7 +13,7 @@ title: Blog
     {% for post in group.items %}
     <li>
         <span style="color: gray;">{{ post.date | date: "%Y-%m-%d" }}:</span>
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ post.url | downcase }}">{{ post.title }}</a>
     </li>
     {% endfor %}
 </ul>
