Software landing page

--- a/src/collections/_software/minecraft-modpack.html
+++ b/src/collections/_software/minecraft-modpack.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Evan's Minecraft Modpack
+description: My personal Minecraft modpack
 software_category: minecraft
 ---
 
