Single photo feed

--- a/src/photography.html
+++ b/src/photography.html
@@ -12,7 +12,7 @@ custom_css: |
 
     .photo-feed-entry {
         margin: 1em;
-        max-width: calc(max(45%, 300px));
+       /*  max-width: calc(max(45%, 300px)); */
     }
 
     @media screen and (max-width: calc(((300px + 2em) * 2) + 2em)) {
